# fastapi-celery-realtime-demo

./: README.md  pyproject.toml
app/: celery_worker.py  main.py  tasks.py
