[tool.poetry]
name = "celery-rabbitmq"
version = "0.1.0"
description = ""
authors = ["M Afif Nur Azizi <grithaqq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.5.1"
jupyterlab = "^4.4.0"
redis = "^5.2.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
gradio = "^5.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
